[gd_scene load_steps=9 format=3 uid="uid://crd7i622oq4dq"]

[ext_resource type="Script" uid="uid://c3ffy06c1n3um" path="res://scenes/main_game/chest/chest_main.gd" id="1_1igly"]
[ext_resource type="PackedScene" uid="uid://dxxsqpwfdsson" path="res://scenes/main_game/chest/chest_container.tscn" id="2_4idjw"]
[ext_resource type="PackedScene" uid="uid://bcabalm40spo5" path="res://scenes/GUI/chest/gui_chest_main.tscn" id="2_bxqva"]
[ext_resource type="PackedScene" uid="uid://4p4u6myuj4oc" path="res://scenes/main_game/combat/weather/weather_main.tscn" id="2_jsprl"]
[ext_resource type="Resource" uid="uid://cbvas0c5a6cc7" path="res://data/weathers/all_chapters/weather_sunny.tres" id="3_ifyj7"]
[ext_resource type="PackedScene" uid="uid://b5vvjdyudqxkf" path="res://scenes/main_game/combat/world/water/dynamic_water.tscn" id="4_hy7bp"]
[ext_resource type="PackedScene" uid="uid://cyojxmvm4jvfn" path="res://scenes/main_game/field/field.tscn" id="4_tn6cl"]
[ext_resource type="PackedScene" uid="uid://80viyq40b6jc" path="res://scenes/main_game/chest/chest.tscn" id="6_2w5x8"]

[node name="ChestMain" type="Node2D"]
script = ExtResource("1_1igly")

[node name="WeatherMain" parent="." instance=ExtResource("2_jsprl")]
unique_name_in_owner = true
test_weather = ExtResource("3_ifyj7")

[node name="ChestContainer" parent="." instance=ExtResource("2_4idjw")]
unique_name_in_owner = true
visible = false

[node name="Field" parent="." instance=ExtResource("4_tn6cl")]
position = Vector2(0, -8)

[node name="Chest" parent="Field" instance=ExtResource("6_2w5x8")]
position = Vector2(0, -8)

[node name="DynamicWater" parent="." instance=ExtResource("4_hy7bp")]

[node name="GUIChestMain" parent="." instance=ExtResource("2_bxqva")]
unique_name_in_owner = true
